Fixed MAGETWO-10410: [IE] List of theme css shifted

--- a/app/code/Mage/DesignEditor/view/adminhtml/css/styles.css
+++ b/app/code/Mage/DesignEditor/view/adminhtml/css/styles.css
@@ -916,6 +916,10 @@
     margin-left: 0;
 }
 
+.eq-ie8 .files-wrapper .files-list:first-child + .files-list + .files-list + .files-list {
+    margin-left: 0;
+}
+
 .files-wrapper .files-list:last-child {
     margin-bottom: 0;
 }
